--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.JfreeChart.classpath}:\
-    ${libs.POI.classpath}
+    ${libs.POI.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
