implement view for registers db

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ excludes=
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.30.jar=../../../../../../Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.30.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
@@ -47,7 +47,7 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
